<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".CompanyRegister">


  <TextView
        android:id="@+id/Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="20dp"
        android:text="@string/Login"
        android:textColor="#2952C8"
        android:textSize="16sp">



    </TextView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="44dp"
        android:background="@drawable/ic_rectangle_login"
        android:padding="12dp">


        <TextView
            android:id="@+id/companyText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="7dp"
            android:text="@string/CompanyName"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold">

        </TextView>

        <EditText
            android:id="@+id/company"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/companyText"
            android:layout_marginLeft="6dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="6dp"
            android:background="@drawable/ic_rectangle_loginbtn"
            android:hint="@string/CompanyName"
            android:padding="6dp"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black"
            android:textSize="16sp">

        </EditText>

        <TextView
            android:id="@+id/emailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/company"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="10dp"
            android:text="@string/BusinesEmail"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold">

        </TextView>

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/emailText"
            android:layout_marginLeft="6dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="6dp"
            android:background="@drawable/ic_rectangle_loginbtn"
            android:hint="@string/BusinesEmail"
            android:inputType="textEmailAddress"
            android:padding="6dp"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black"
            android:textSize="16sp">

        </EditText>
        <TextView
            android:id="@+id/tv_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="10dp"
            android:text="@string/PhoneNumber"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold">

        </TextView>

        <EditText
            android:id="@+id/phoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_phone"
            android:layout_marginLeft="6dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="6dp"
            android:background="@drawable/ic_rectangle_loginbtn"
            android:hint="@string/PhoneNumber"
            android:inputType="phone"
            android:padding="6dp"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black"
            android:textSize="16sp">

        </EditText>


        <TextView
            android:id="@+id/passwordtext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/phoneNumber"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="10dp"
            android:text="@string/Password"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold">

        </TextView>


        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/passwordtext"
            android:layout_marginLeft="6dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="6dp"
            android:background="@drawable/ic_rectangle_loginbtn"
            android:hint="@string/Password"
            android:inputType="textPassword"
            android:padding="6dp"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black"
            android:textSize="16sp">

        </EditText>


        <Button
            android:id="@+id/btnsignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="10dp"
            android:text="@string/signup"
            android:textAllCaps="false"
            android:textSize="16sp">

        </Button>


    </RelativeLayout>


</RelativeLayout>