<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".register">




    <TextView
        android:id="@+id/Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="20dp"
        android:text="@string/Login"
        android:textColor="#2952C8"
        android:textSize="16sp">

    </TextView>



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="12dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/ic_rectangle_login">




        <TextView
            android:id="@+id/fullnameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="FullName"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginTop="7dp"
            android:textColor="@android:color/black"
            android:layout_marginLeft="4dp">

        </TextView>

        <EditText
            android:id="@+id/fullname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/fullnameText"
            android:hint="Fullname"
            android:padding="6dp"
            android:textColorHint="@android:color/black"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:background="@drawable/ic_rectangle_loginbtn"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:layout_marginTop="8dp">

        </EditText>

        <TextView
            android:id="@+id/emailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_below="@+id/fullname"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/black"
            android:layout_marginLeft="4dp">

        </TextView>

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/emailText"
            android:hint="@string/email"
            android:padding="6dp"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black"
            android:textSize="16sp"
            android:background="@drawable/ic_rectangle_loginbtn"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:layout_marginTop="8dp">

        </EditText>


        <TextView
            android:id="@+id/passwordtext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Password"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_below="@+id/email"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/black"
            android:layout_marginLeft="4dp">

        </TextView>



        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/passwordtext"
            android:hint="@string/Password"
            android:padding="6dp"
            android:inputType="textPassword"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black"
            android:textSize="16sp"
            android:background="@drawable/ic_rectangle_loginbtn"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:layout_marginTop="8dp">

        </EditText>



        <Button
            android:id="@+id/btnsignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password"
            android:text="@string/signup"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="30dp">

        </Button>









    </RelativeLayout>


</RelativeLayout>